--- a/gameclient/src/index.css
+++ b/gameclient/src/index.css
@@ -4,9 +4,25 @@
 @tailwind components;
 @tailwind utilities;
 
+/* === Local font: Minecraftia ===
+   Make sure the file lives at /public/fonts/Minecraftia-Regular.ttf
+*/
+@font-face {
+  font-family: 'Minecraftia';
+  src: url('/fonts/Minecraftia-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Utility class for Minecraftia (use in JSX: className="font-minecraftia") */
+.font-minecraftia {
+  font-family: 'Minecraftia', ui-sans-serif;
+}
+
 /* Brick wall background */
 .brick-wall {
-  background-image: 
+  background-image:
     linear-gradient(335deg, #b91c1c 23px, transparent 23px),
     linear-gradient(155deg, #b91c1c 23px, transparent 23px),
     linear-gradient(335deg, #dc2626 23px, transparent 23px),
